tests/fixtures/invalid/pow_float_dict_int.py
# Cannot call pow() with Float, Dict[str, int], Int
x = pow(1.0, {"a": 1}, 1)
